services/console/styles/globals.css
@font-face {
  font-family: 'Montserrat';
  src: url('/fonts/Montserrat/Montserrat-VariableFont_wght.ttf');
  font-style: auto;
  font-weight: 500;
  font-display: swap;
}

@font-face {
  font-family: 'Montserrat';
  src: url('/fonts/Montserrat/Montserrat-italic-VariableFont_wght.ttf');
  font-style: italic;
  font-weight: 500;
  font-display: swap;
}

#__next {
  height: 100%;
  display: flex;
}

html,
body {
  padding: 0;
  margin: 0;
  font-family: Montserrat, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
    Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif !important;
  white-space: pre-line;
}

a {
  color: inherit;
  text-decoration: none;
}

* {
  box-sizing: border-box;
}

.ace_gutter-cell.ace_endpoint:before {
  position: absolute;
  content: '';
  background-image: url('/images/link.png');
  background-size: contain;
  width: 12px;
  height: 12px;
  left: 4px;
  top: 2px;
}

.prisme-events-viewer__event.p-accordion
  .p-accordion-header
  .p-accordion-header-link {
  justify-content: space-between;
  font-weight: inherit;
  color: inherit;
}

.prisme-events-viewer__event.p-accordion
  .p-accordion-header
  .p-accordion-header-text {
  color: inherit;
}

.prisme-events-viewer__event.p-accordion .p-accordion-content {
  padding: 0;
}

.prisme-events-viewer__event .p-accordion-toggle-icon {
  order: 1;
}

.p-float-label .ace_focus ~ label,
.p-float-label .filled ~ label {
  top: -0.75rem;
  font-size: 12px;
}

